--- a/Media/netflix-clone-media.css
+++ b/Media/netflix-clone-media.css
@@ -13,7 +13,8 @@
 
 @media (max-width:410px) {
     .btn-lg input {
-        padding: 15px 110px 15px 15px;
+        padding: 15px 0px 15px 15px;
+        width: 19rem;
     }
 }
 
@@ -58,7 +59,8 @@
 
 @media (max-width: 324px) {
     .btn-lg input {
-        padding: 15px 35px 15px 15px;
+        padding: 15px 0px 15px 15px;
+        width: 14rem;
     }
 
     .trend {
